@@ -47,3 +47,4 @@ OZWForm.vshost.exe.manifest
 ozw_config
 .project
 *~
+.idea/
