@@ -47,16 +47,42 @@ enum BarrierOperatorCmd
 	BarrierOperatorCmd_SignalSupportedReport = 0x05,
 	BarrierOperatorCmd_SignalSet = 0x06,
 	BarrierOperatorCmd_SignalGet = 0x07,
-	BarrierOperatorCmd_SignalReport = 0x06
+	BarrierOperatorCmd_SignalReport = 0x08
 };
 
 enum BarrierOperatorState
 {
 	BarrierOperatorState_Closed = 0x00,
-	BarrierOperatorState_Closing = 0xFC,		
+	BarrierOperatorState_Closing = 0xFC,
 	BarrierOperatorState_Stopped = 0xFD,
 	BarrierOperatorState_Opening = 0xFE,
 	BarrierOperatorState_Open = 0xFF,
+};
+
+enum BarrierOperator_SignalAttributesMask
+{
+    BarrierOperatorSignalMask_Audible      = 0x02,
+    BarrierOperatorSignalMask_Visual       = 0x04,
+    BarrierOperatorSignalMask_All          = 0x06,
+};
+
+enum BarrierOperatorCmd_Indexes
+{
+    BarrierOperatorCmd_Index             = 0x00,
+    BarrierOperatorLabel_Index           = 0x01,
+    BarrierOperatorNumber_Index          = 0x02,
+    BarrierOperatorAudible_Index         = 0x03,
+    BarrierOperatorVisual_Index          = 0x04,
+};
+
+static char const* c_BarrierOperator_States[] =
+{
+        "Closed",
+        "Closing",
+        "Stopped",
+        "Opening",
+        "Opened",
+        "Unknown"
 };
 
 BarrierOperator::BarrierOperator
@@ -70,7 +96,7 @@ CommandClass( _homeId, _nodeId )
 
 
 //-----------------------------------------------------------------------------
-// <Alarm::RequestState>
+// <BarrierOperator::RequestState>
 // Request current state from the device
 //-----------------------------------------------------------------------------
 bool BarrierOperator::RequestState
@@ -80,29 +106,30 @@ bool BarrierOperator::RequestState
 		Driver::MsgQueue const _queue
 )
 {
+	bool res = false;
 	if( _requestFlags & RequestFlag_Dynamic )
 	{
-		return RequestValue( _requestFlags, 0, _instance, _queue );
+		res |= RequestValue( _requestFlags, BarrierOperatorCmd_Index, _instance, _queue );
+		res |= RequestSignalSupport( _instance, _queue );
 	}
 
-	return false;
+	return res;
 }
 
 //-----------------------------------------------------------------------------
-// <Alarm::RequestValue>
+// <BarrierOperator::RequestValue>
 // Request current value from the device
 //-----------------------------------------------------------------------------
 bool BarrierOperator::RequestValue
 (
 		uint32 const _requestFlags,
-		uint16 const _dummy1,	// = 0 (not used)
+		uint8 const _index,
 		uint8 const _instance,
 		Driver::MsgQueue const _queue
 )
 {
-	if (IsGetSupported())
-	{
-		Log::Write(LogLevel_Info, GetNodeId(), "Requesting BarrierOperator status");
+	Log::Write(LogLevel_Info, GetNodeId(), "Requesting BarrierOperator status");
+	if (_index == BarrierOperatorCmd_Index) {
 		Msg* msg = new Msg("BarrierOperatorCmd_Get", GetNodeId(), REQUEST, FUNC_ID_ZW_SEND_DATA, true, true, FUNC_ID_APPLICATION_COMMAND_HANDLER, GetCommandClassId());
 		msg->SetInstance(this, _instance);
 		msg->Append(GetNodeId());
@@ -113,14 +140,56 @@ bool BarrierOperator::RequestValue
 		GetDriver()->SendMsg(msg, _queue);
 		return true;
 	}
-	else {
-		Log::Write(LogLevel_Info, GetNodeId(), "BarrierOperatorCmd_Get Not Supported on this node");
+	else if ( _index == BarrierOperatorAudible_Index ) {
+		Msg* msg = new Msg("BarrierOperatorCmd_SignalGet", GetNodeId(), REQUEST, FUNC_ID_ZW_SEND_DATA, true, true, FUNC_ID_APPLICATION_COMMAND_HANDLER, GetCommandClassId());
+		msg->SetInstance(this, _instance);
+		msg->Append(GetNodeId());
+		msg->Append(3);
+		msg->Append(GetCommandClassId());
+		msg->Append(BarrierOperatorCmd_SignalGet);
+		msg->Append(0x01);
+		msg->Append(GetDriver()->GetTransmitOptions());
+		GetDriver()->SendMsg(msg, _queue);
+		return true;
+	}
+	else if (_index == BarrierOperatorVisual_Index) {
+		Msg* msg = new Msg("BarrierOperatorCmd_SignalGet", GetNodeId(), REQUEST, FUNC_ID_ZW_SEND_DATA, true, true, FUNC_ID_APPLICATION_COMMAND_HANDLER, GetCommandClassId());
+		msg->SetInstance(this, _instance);
+		msg->Append(GetNodeId());
+		msg->Append(3);
+		msg->Append(GetCommandClassId());
+		msg->Append(BarrierOperatorCmd_SignalGet);
+		msg->Append(0x02);
+		msg->Append(GetDriver()->GetTransmitOptions());
+		GetDriver()->SendMsg(msg, _queue);
+		return true;
 	}
 	return false;
 }
 
 //-----------------------------------------------------------------------------
-// <Alarm::HandleMsg>
+// <BarrierOperator::RequestSignalSupport>
+// Request RequestSignalSupport from the device
+//-----------------------------------------------------------------------------
+bool BarrierOperator::RequestSignalSupport
+(
+		uint8 const _instance,
+		Driver::MsgQueue const _queue
+)
+{
+	Msg* msg = new Msg("BarrierOperatorCmd_SignalSupportedGet", GetNodeId(), REQUEST, FUNC_ID_ZW_SEND_DATA, true, true, FUNC_ID_APPLICATION_COMMAND_HANDLER, GetCommandClassId());
+	msg->SetInstance(this, _instance);
+	msg->Append(GetNodeId());
+	msg->Append(2);
+	msg->Append(GetCommandClassId());
+	msg->Append(BarrierOperatorCmd_SignalSupportedGet);
+	msg->Append(GetDriver()->GetTransmitOptions());
+	GetDriver()->SendMsg(msg, _queue);
+	return true;
+}
+
+//-----------------------------------------------------------------------------
+// <BarrierOperator::HandleMsg>
 // Handle a message from the Z-Wave network
 //-----------------------------------------------------------------------------
 bool BarrierOperator::HandleMsg
@@ -133,47 +202,99 @@ bool BarrierOperator::HandleMsg
 	if (BarrierOperatorCmd_Report == (BarrierOperatorCmd)_data[0])
 	{
 		const char* state = "Unknown";
-		if (_data[1] == BarrierOperatorState_Closed) state = "Closed";
-		else if (_data[1] == BarrierOperatorState_Closing) state = "Closing";
-		else if (_data[1] == BarrierOperatorState_Stopped) state = "Stopped";
-		else if (_data[1] == BarrierOperatorState_Opening) state = "Opening";
-		else if (_data[1] == BarrierOperatorState_Open) state = "Open";
+		uint8 state_index = 5;
+		if (_data[1] == BarrierOperatorState_Closed) {state = c_BarrierOperator_States[0];state_index = 0;}
+		else if (_data[1] == BarrierOperatorState_Closing) {state = c_BarrierOperator_States[1];state_index = 1;}
+		else if (_data[1] == BarrierOperatorState_Stopped) {state = c_BarrierOperator_States[2];state_index = 2;}
+		else if (_data[1] == BarrierOperatorState_Opening) {state = c_BarrierOperator_States[3];state_index = 3;}
+		else if (_data[1] == BarrierOperatorState_Open) {state = c_BarrierOperator_States[4];state_index = 4;}
 
 		Log::Write(LogLevel_Info, GetNodeId(), "Received BarrierOperator report: Barrier is %s", state);
-
+		if( ValueList* value = static_cast<ValueList*>( GetValue( _instance, 1 ) ) )
+		{
+			value->OnValueRefreshed( state_index );
+			value->Release();
+		} else {
+			Log::Write( LogLevel_Warning, GetNodeId(), "No ValueID created for BarrierOperator state");
+			return false;
+		}
+		if( ValueByte* value = static_cast<ValueByte*>( GetValue( _instance, 2 ) ) )
+		{
+			value->OnValueRefreshed( _data[1] );
+			value->Release();
+		} else {
+			Log::Write( LogLevel_Warning, GetNodeId(), "No ValueID created for BarrierOperator state");
+			return false;
+		}
 		if (_data[1] == BarrierOperatorState_Open || _data[1] == BarrierOperatorState_Closed)
 		{
 			if (ValueBool* value = static_cast<ValueBool*>(GetValue(_instance, 0)))
 			{
 				value->OnValueRefreshed(_data[1] != BarrierOperatorState_Closed);
-				value->Release();				
+				value->Release();
 			}
 		}
-		return true;		
+		return true;
 	}
-
-	return false;
-}
-
-bool BarrierOperator::SetValue
-(
-	Value const& _value
-	)
-{
-	if (ValueID::ValueType_Bool == _value.GetID().GetType())
+	if (BarrierOperatorCmd_SignalSupportedReport == (BarrierOperatorCmd)_data[0])
 	{
-		ValueBool const* value = static_cast<ValueBool const*>(&_value);
-
-		Log::Write(LogLevel_Info, GetNodeId(), "BarrierOperator::Set - Requesting barrier to be %s", value->GetValue() ? "Open" : "Closed");
-		Msg* msg = new Msg("LockCmd_Get", GetNodeId(), REQUEST, FUNC_ID_ZW_SEND_DATA, true);
-		msg->SetInstance(this, _value.GetID().GetInstance());
-		msg->Append(GetNodeId());
-		msg->Append(3);
-		msg->Append(GetCommandClassId());
-		msg->Append(BarrierOperatorCmd_Set);
-		msg->Append(value->GetValue() ? 0xFF : 0x00);
-		msg->Append(GetDriver()->GetTransmitOptions());
-		GetDriver()->SendMsg(msg, Driver::MsgQueue_Send);
+		Log::Write(LogLevel_Info, GetNodeId(), "Received BarrierOperator Signal Support Report");
+		if (BarrierOperatorSignalMask_Audible == _data[1])
+		{
+			Log::Write(LogLevel_Info, GetNodeId(), "Received Audible support");
+			if (Node* node = GetNodeUnsafe())
+			{
+				node->CreateValueBool(ValueID::ValueGenre_User, GetCommandClassId(), _instance, 3, "Audible", "", false, false, false, 0);
+			}
+			RequestValue( 0, BarrierOperatorCmd_SignalGet, _instance, Driver::MsgQueue_Send );
+		}
+		else if (BarrierOperatorSignalMask_Visual == _data[1])
+		{
+			Log::Write(LogLevel_Info, GetNodeId(), "Received Visual support");
+			if (Node* node = GetNodeUnsafe())
+			{
+				node->CreateValueBool(ValueID::ValueGenre_User, GetCommandClassId(), _instance, 4, "Visual", "", false, false, false, 0);
+			}
+			RequestValue( 0, BarrierOperatorCmd_SignalGet, _instance, Driver::MsgQueue_Send );
+		}
+		else if (BarrierOperatorSignalMask_All == _data[1])
+		{
+			Log::Write(LogLevel_Info, GetNodeId(), "Received All (Audible and Visual) support");
+			if (Node* node = GetNodeUnsafe())
+			{
+				node->CreateValueBool(ValueID::ValueGenre_User, GetCommandClassId(), _instance, 3, "Audible", "", false, false, false, 0);
+				node->CreateValueBool(ValueID::ValueGenre_User, GetCommandClassId(), _instance, 4, "Visual", "", false, false, false, 0);
+			}
+			RequestValue( 0, BarrierOperatorCmd_SignalGet, _instance, Driver::MsgQueue_Send );
+			RequestValue( 0, BarrierOperatorCmd_SignalGet, _instance, Driver::MsgQueue_Send );
+		}
+		else
+		{
+			Log::Write(LogLevel_Info, GetNodeId(), "Received No support");
+		}
+		return true;
+	}
+	if (BarrierOperatorCmd_SignalReport == (BarrierOperatorCmd)_data[0])
+	{
+		Log::Write(LogLevel_Info, GetNodeId(), "Received BarrierOperator Signal Report");
+		if (_data[1] == 0x01)
+		{
+			Log::Write(LogLevel_Info, GetNodeId(), "Received BarrierOperator Signal Report for Audible");
+			if (ValueBool* value = static_cast<ValueBool*>(GetValue(_instance, 3)))
+			{
+				value->OnValueRefreshed(_data[2] != 0x00);
+				value->Release();
+			}
+		}
+		if (_data[1] == 0x02)
+		{
+			Log::Write(LogLevel_Info, GetNodeId(), "Received BarrierOperator Signal Report for Visual");
+			if (ValueBool* value = static_cast<ValueBool*>(GetValue(_instance, 4)))
+			{
+				value->OnValueRefreshed(_data[2] != 0x00);
+				value->Release();
+			}
+		}
 		return true;
 	}
 
@@ -181,7 +302,71 @@ bool BarrierOperator::SetValue
 }
 
 //-----------------------------------------------------------------------------
-// <Alarm::CreateVars>
+// <BarrierOperator::SetValue>
+// Set a value
+//-----------------------------------------------------------------------------
+
+bool BarrierOperator::SetValue
+(
+	Value const& _value
+	)
+{
+	uint8 idx = _value.GetID().GetIndex();
+	if (ValueID::ValueType_Bool == _value.GetID().GetType())
+	{
+		if (idx == 0)
+		{
+			ValueBool const* value = static_cast<ValueBool const*>(&_value);
+			Log::Write(LogLevel_Info, GetNodeId(), "BarrierOperator::Set - Requesting barrier to be %s", value->GetValue() ? "Open" : "Closed");
+			Msg* msg = new Msg("BarrierOperatorCmd_Set", GetNodeId(), REQUEST, FUNC_ID_ZW_SEND_DATA, true);
+			msg->SetInstance(this, _value.GetID().GetInstance());
+			msg->Append(GetNodeId());
+			msg->Append(3);
+			msg->Append(GetCommandClassId());
+			msg->Append(BarrierOperatorCmd_Set);
+			msg->Append(value->GetValue() ? 0xFF : 0x00);
+			msg->Append(GetDriver()->GetTransmitOptions());
+			GetDriver()->SendMsg(msg, Driver::MsgQueue_Send);
+			return true;
+		}
+		else if (idx == 3)
+		{
+			ValueBool const* value = static_cast<ValueBool const*>(&_value);
+			Log::Write(LogLevel_Info, GetNodeId(), "BarrierOperatorSignal::Set - Requesting Audible to be %s", value->GetValue() ? "ON" : "OFF");
+			Msg* msg = new Msg("BarrierOperatorSignalCmd_Set", GetNodeId(), REQUEST, FUNC_ID_ZW_SEND_DATA, true);
+			msg->SetInstance(this, _value.GetID().GetInstance());
+			msg->Append(GetNodeId());
+			msg->Append(4);
+			msg->Append(GetCommandClassId());
+			msg->Append(BarrierOperatorCmd_SignalSet);
+			msg->Append(1);
+			msg->Append(value->GetValue() ? 0xFF : 0x00);
+			msg->Append(GetDriver()->GetTransmitOptions());
+			GetDriver()->SendMsg(msg, Driver::MsgQueue_Send);
+			return true;
+		}
+		else if (idx == 4)
+		{
+			ValueBool const* value = static_cast<ValueBool const*>(&_value);
+			Log::Write(LogLevel_Info, GetNodeId(), "BarrierOperatorSignal::Set - Requesting Visual to be %s", value->GetValue() ? "ON" : "OFF");
+			Msg* msg = new Msg("BarrierOperatorSignalCmd_Set", GetNodeId(), REQUEST, FUNC_ID_ZW_SEND_DATA, true);
+			msg->SetInstance(this, _value.GetID().GetInstance());
+			msg->Append(GetNodeId());
+			msg->Append(4);
+			msg->Append(GetCommandClassId());
+			msg->Append(BarrierOperatorCmd_SignalSet);
+			msg->Append(2);
+			msg->Append(value->GetValue() ? 0xFF : 0x00);
+			msg->Append(GetDriver()->GetTransmitOptions());
+			GetDriver()->SendMsg(msg, Driver::MsgQueue_Send);
+			return true;
+		}
+	}
+	return false;
+}
+
+//-----------------------------------------------------------------------------
+// <BarrierOperator::CreateVars>
 // Create the values managed by this command class
 //-----------------------------------------------------------------------------
 void BarrierOperator::CreateVars
@@ -191,7 +376,18 @@ void BarrierOperator::CreateVars
 {
 	if (Node* node = GetNodeUnsafe())
 	{
-		node->CreateValueBool(ValueID::ValueGenre_User, GetCommandClassId(), _instance, 0, "Open", "", false, false, false, 0);
+		node->CreateValueBool(ValueID::ValueGenre_User, GetCommandClassId(), _instance, BarrierOperatorCmd_Index, "Open", "", false, false, false, 0);
+		vector<ValueList::Item> items;
+        unsigned int size = (sizeof(c_BarrierOperator_States)/sizeof(c_BarrierOperator_States[0]));
+        for( unsigned int i=0; i < size; i++)
+        {
+            ValueList::Item item;
+            item.m_label = c_BarrierOperator_States[i];
+            item.m_value = i;
+            items.push_back( item );
+        }
+		node->CreateValueList( ValueID::ValueGenre_User, GetCommandClassId(), _instance, BarrierOperatorLabel_Index, "Barrier State Label", "", true, false, size, items, 0, 0 );
+		node->CreateValueByte( ValueID::ValueGenre_User, GetCommandClassId(), _instance, BarrierOperatorNumber_Index ,"Barrier State Numeric", "", true, false, 0, 0 );
 	}
 }
 
